tests/src/frontend/typechecking/exhaustiveness/invalid/child_class_override_named_params_dead_pattern.sk
base class A{x: Int}
class B{y: Bool} extends A

fun myMatch(x: A): String {
  x match {
  | A{x => 1} -> "P"
  | B{y => false} -> "a"
  | B{y => true, x => 2} -> "s"
  | B{y => true, x => 2} -> "s"
  | A{x => _} -> "\n"
  }
}
